# nn-engine-project

./: README.md  main.py  pyproject.toml  requirements.txt
data/iris/: iris_cached.npz
notebooks/: demo_iris.ipynb  experiment_mnist.ipynb
scripts/: load_datasets.py
src/: __init__.py  layers.py  losses.py  network.py  optimizers.py  schedulers.py  utils.py
tests/: test_gradcheck.ipynb  unit_tests.py
